[tool.poetry]
name = "sudoku-game"
version = "0.1.0"
description = ""
authors = ["Adrjan <43217550+AardJan@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "3.9"
numpy = "^1.21.4"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
isort = "^5.10.1"
pylint = "^2.12.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
sudoku = "sudoku_game:sudoku_game"

[tool.black]
line-length = 79 # override black's default line-length
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | venv
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
# make it compatible with black
profile = "black" 